--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
     "build": "cd client && npm run build",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build",
+    "render-start": "node server/dist/server.js"
   },
   "keywords": [],
   "author": "",
