--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
-    "build": "cd client && npm run build",
+    "build": "npm run server:build && npm run client:build",
+    "server:build": "cd server && tsc",
     "render-build": "npm install && npm run build",
     "render-start": "node server/dist/server.js"
   },
@@ -22,7 +23,8 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
-    "wait-on": "^7.2.0"
+    "wait-on": "^7.2.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
