--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
-    "build": "npm run server:build && npm run client:build",
-    "server:build": "cd server && tsc",
-    "render-build": "npm install && npm run build",
-    "render-start": "node server/dist/server.js"
+    "build": "cd client && npm run build",
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -23,13 +21,10 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
-    "wait-on": "^7.2.0",
-    "typescript": "^4.9.5"
+    "wait-on": "^7.2.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2"
+    "bootstrap": "^5.3.3"
   }
 }
