--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && npm run server",
+    "start": "npm run client:build && npm run server",
     "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
-    "server": "node server/dist/server.js",
+    "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
     "install": "cd server && npm i && cd ../client && npm i",
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
-    "build": "npm run server:build && npm run client:build",
-    "server:build": "cd server && tsc",
-    "client:tsc": "cd client && tsc",
-    "render-build": "npm install && npm run build",
-    "render-start": "npm run server"
+    "build": "cd client && npm run build",
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -24,13 +21,10 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
-    "typescript": "^4.9.5",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2"
+    "bootstrap": "^5.3.3"
   }
 }
